force-app/main/default/objects/student__c/student__c.object-meta.xml
<CustomObject>
    <label>student</label>
    <nameField>
        <label>student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>students</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>