force-app/main/default/objects/student__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <label>course</label>
    <referenceTo>course__c</referenceTo>
    <relationshipLabel>students</relationshipLabel>
    <relationshipName>students</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>