force-app/main/default/objects/student__c/fields/Course_Type_Copy__c.field-meta.xml
<CustomField>
    <fullName>Course_Type_Copy__c</fullName>
    <label>Course Type Copy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Tamil</fullName>
            </value>
            <value>
                <fullName>Social</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>