force-app/main/default/objects/student__c/fields/Gearset__c.field-meta.xml
<CustomField>
    <fullName>Gearset__c</fullName>
    <label>Gearset</label>
    <length>50</length>
    <type>Text</type>
</CustomField>