force-app/main/default/objects/student__c/fields/Student_category__c.field-meta.xml
<CustomField>
    <fullName>Student_category__c</fullName>
    <label>Student category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Course_Type_Copy__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
            </value>
            <value>
                <fullName>fresher</fullName>
            </value>
            <value>
                <fullName>advanced</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>