force-app/main/default/objects/student__c/recordTypes/alumini_record.recordType-meta.xml
<RecordType>
    <fullName>alumini_record</fullName>
    <active>true</active>
    <label>alumini record</label>
</RecordType>