force-app/main/default/objects/student__c/recordTypes/student_record.recordType-meta.xml
<RecordType>
    <fullName>student_record</fullName>
    <active>true</active>
    <label>student record</label>
</RecordType>